--- a/assets/foodshelves/lang/en.json
+++ b/assets/foodshelves/lang/en.json
@@ -35,6 +35,7 @@
   "block-meatfreezer-*": "Meat Freezer",
   "block-wallcabinet-*": "Wall Cabinet",
   "block-floursack-*": "Flour Sack",
+  "block-doubleshelf-*": "Double Shelf",
 
   "blockdesc-canhold-title": "Can hold:",
   "blockdesc-canbeplacedin-title": "Can be placed in:",
@@ -66,7 +67,7 @@
   "helddesc-coolingcabinet": "Food stored in this cabinet stays fresh 25% longer, or up to 70% longer when ice is added.<br>Make sure to keep it closed!",
   "helddesc-meatfreezer": "Raw meat stored in this freezer stays fresh 60% longer, or up to 5x longer when ice is added.<br>Make sure to keep it closed!",
   "helddesc-wallcabinet": "Stuff placed in this cabinet lasts up to 25% longer.<br>Make sure to keep it closed!",
-  "helddesc-floursack": "Flour placed in this sack lasts up to 40% longer.",
+  "helddesc-floursack": "Flour placed in this sack lasts up to 4x longer.",
 
   "This item cannot be placed in this container.": "This item cannot be placed in this container.",
   "Only pies or cheese can be placed on this shelf.": "Only pies or cheese can be placed on this shelf.",
