--- a/assets/foodshelves/lang/sr.json
+++ b/assets/foodshelves/lang/sr.json
@@ -32,6 +32,9 @@
   "block-glassjar-*": "Стаклена тегла",
   "block-ceilingjar-*": "Тегла за плафон",
   "block-coolingcabinet-*": "Фрижидер",
+  "block-meatfreezer-*": "Замрзивач за месо",
+  "block-wallcabinet-*": "Зидна витрина",
+  "block-floursack-*": "Џак за брашно",
 
   "blockdesc-canhold-title": "Може да садржи:",
   "blockdesc-canbeplacedin-title": "Може се ставити у:",
@@ -52,13 +55,18 @@
   "blockdesc-pumpkincase-text": "  -Бундеве.",
   "blockdesc-fooduniversal-text": "  -Пите, сиреви, све врсте хлеба<br>Expanded Foods:<br>  -Маффини<br>  -Кнедле<br>  -Меки хлеб",
   "blockdesc-holderuniversal-text": "  -Пите, сиреви, све врсте хлеба, посуде и лонци<br>Полице за храну:<br>  -Све корпе<br>Expanded Foods:<br>  -Воћне штанглице<br>  -Маффини<br>  -Кнедле<br>  -Меки хлеб<br>Wildcraft: Воће и орашасти плодови:<br>  -Све орашасте штанглице<br>  -Пакока<br>  -Халва<br>  -Марципан<br>Храна за дуго складиштење:<br>  -Сви пемикани<br>  -Пакован пемикан<br>  -Паштета од печурака",
+  "blockdesc-meatfreezer-text": "  -Свакакве типове сировог меса.",
+  "blockdesc-floursack-text": "  -Свакакве типове брашна.",
 
-  "helddesc-breadshelf": "Хлеб постављен на ову полицу остаје свеже 100% дуже.",
-  "helddesc-barrelrack": "Течности у овом носачу за буре остају свеже 50% дуже и ферментишу 20% спорије.",
-  "helddesc-tunrack": "Течности у овом носачу за кад остају свеже 60% дуже и ферментишу 25% спорије.",
+  "helddesc-breadshelf": "Хлеб постављен на ову полицу трају 100% дуже.",
+  "helddesc-barrelrack": "Течности у овом носачу за буре трају 50% дуже и ферментишу 20% спорије.",
+  "helddesc-tunrack": "Течности у овом носачу за кад трају 60% дуже и ферментишу 25% спорије.",
   "helddesc-ceilingjar": "Осушено воће у овој тегли суши се или се топи 2.5x брже, и остаје свеже 25% дуже. Житарице у њој остају свеже 35% дуже него у обичној посуди.",
-  "helddesc-fooddisplaycase": "Храна у овој витрини остаје свеже 25% дуже.",
-  "helddesc-coolingcabinet": "Храна у овом фрижидеру остаје свеже 25% дуже, или до 70% дуже ако се дода лед.<br>Обавезно га држите затвореним!",
+  "helddesc-fooddisplaycase": "Храна у овој витрини траје  25% дуже.",
+  "helddesc-coolingcabinet": "Храна у овом фрижидеру траје 25% дуже, или до 70% дуже ако се дода лед.<br>Обавезно га држите затвореним!",
+  "helddesc-meatfreezer": "Сирово месо постављено у овај замрзивач траје 60% дуже, или до чак 5x дуже када се дода лед.<br>Обавезно га држите затвореним!",
+  "helddesc-wallcabinet": "Ствари постављене у овој витрини траје 25% дуже.<br>Обавезно га држите затвореним!",
+  "helddesc-floursack": "Брашно остављено у овом џаку траје до 40% дуже.",
 
   "This item cannot be placed in this container.": "Овај предмет не може бити стављен у овај контејнер.",
   "Only pies or cheese can be placed on this shelf.": "Само пите или сиреви могу бити постављени на ову полицу.",
@@ -73,6 +81,8 @@
   "Only eggs can be placed in this basket.": "Само јаја могу бити стављена у ову корпу.",
   "Only barrels can be placed on this rack.": "Само буре могу бити постављене на овај носач.",
   "Only tuns can be placed on this rack.": "Само кадови могу бити постављени на овај носач.",
+  "Only raw meat can be placed in this freezer.": "Само сирово месо се може стављати у овај замрзивач.",
+  "Only flour can be placed in this sack.": "Само брашно се може оставити у овај џак.",
 
   "This tun needs to be placed in a tun rack.": "Овај кад мора бити постављен у носач за кад.",
   "The barrel must be emptied before it can be picked up.": "Буре мора бити испражњено пре него што се подигне.",
