--- a/assets/foodshelves/lang/en.json
+++ b/assets/foodshelves/lang/en.json
@@ -7,12 +7,19 @@
 
   "block-shortshelf-*": "Short Shelf",
   "block-pieshelf-*": "Pie/Cheese Shelf",
-  "block-breadshelf-*": "Bread Shelf",
-  "block-barshelf-*": "Bar Shelf",
-  "block-sushishelf-*": "Sushi Shelf",
-  "block-eggshelf-*": "Egg Shelf",
-  "block-seedshelf-*": "Seed Shelf",
-  "block-glassjarshelf-*": "Glass Jar Shelf",
+  "block-breadshelf-normal-*": "Bread Shelf",
+  "block-breadshelf-short-*": "Short Bread Shelf",
+  "block-barshelf-normal-*": "Bar Shelf",
+  "block-barshelf-short-*": "Short Bar Shelf",
+  "block-sushishelf-normal-*": "Sushi Shelf",
+  "block-sushishelf-short-*": "Short Sushi Shelf",
+  "block-eggshelf-normal-*": "Egg Shelf",
+  "block-eggshelf-short-*": "Short Egg Shelf",
+  "block-seedshelf-normal-*": "Seed Shelf",
+  "block-seedshelf-short-*": "Short Seed Shelf",
+  "block-seedshelf-veryshort-*": "Very Short Seed Shelf",
+  "block-glassjarshelf-normal-*": "Glass Jar Shelf",
+  "block-glassjarshelf-short-*": "Short Glass Jar Shelf",
   "block-fruitbasket-*": "Fruit Basket",
   "block-vegetablebasket-*": "Vegetable Basket",
   "block-eggbasket-*": "Egg Basket",
@@ -21,13 +28,17 @@
   "block-tablewshelf-whitemarble-*": "White marble-topped table with a shelf",
   "block-tablewshelf-redmarble-*": "Pink marble-topped table with a shelf",
   "block-tablewshelf-greenmarble-*": "Green marble-topped table with a shelf",
-  "block-barrelrack-*": "Barrel rack",
+  "block-barrelrack-normal-*": "Barrel rack",
+  "block-barrelrack-top-*": "Top Barrel rack",
   "block-tun-*": "Tun",
-  "block-tunrack-*": "Tun rack",
-  "block-firkinrack-*": "Firkin rack",
+  "block-tunrack-normal-*": "Tun rack",
+  "block-tunrack-top-*": "Top Tun rack",
+  "block-firkinrack-normal-*": "Firkin rack",
+  "block-firkinrack-top-*": "Top Firkin rack",
   "block-firkin*": "Firkin",
   "block-pumpkincase-*": "Pumpkin Case",
-  "block-fooddisplayblock-*": "Food Display Block",
+  "block-fooddisplayblock-normal-*": "Food Display Block",
+  "block-fooddisplayblock-top-*": "Top Food Display Block",
   "block-fooddisplaycase-*": "Food Display Case",
   "block-glassjar-*": "Glass Jar",
   "block-ceilingjar-*": "Ceiling Jar",
@@ -98,10 +109,6 @@
   "Contents": "<font color=\"orange\">Contents: </font>",
   "Soonest": "Soonest:",
   "Empty.": "Empty.",
-
-  "short": "Short",
-  "veryshort": "Very Short",
-  "top": "Top",
 
   "Will melt in {0} years": "Will melt in {0} years",
   "Will melt in {0} days": "Will melt in {0} days",
