--- a/assets/foodshelves/lang/sr.json
+++ b/assets/foodshelves/lang/sr.json
@@ -35,6 +35,7 @@
   "block-meatfreezer-*": "Замрзивач за месо",
   "block-wallcabinet-*": "Зидна витрина",
   "block-floursack-*": "Џак за брашно",
+  "block-doubleshelf": "Дупла сталажа",
 
   "blockdesc-canhold-title": "Може да садржи:",
   "blockdesc-canbeplacedin-title": "Може се ставити у:",
