--- a/assets/foodshelves/lang/en.json
+++ b/assets/foodshelves/lang/en.json
@@ -37,8 +37,8 @@
   "block-firkinrack-top-*": "Top Firkin rack",
   "block-firkin*": "Firkin",
   "block-pumpkincase-*": "Pumpkin Case",
-  "block-fooddisplayblock-normal-*": "Food Display Block",
-  "block-fooddisplayblock-top-*": "Top Food Display Block",
+  "block-fooddisplayblock-normal": "Food Display Block",
+  "block-fooddisplayblock-top": "Top Food Display Block",
   "block-fooddisplaycase-*": "Food Display Case",
   "block-glassjar-*": "Glass Jar",
   "block-ceilingjar-*": "Ceiling Jar",
