Updated Polish translation

--- a/assets/foodshelves/lang/pl.json
+++ b/assets/foodshelves/lang/pl.json
@@ -26,26 +26,26 @@
   "block-coolingcabinet-*": "Chłodzona witryna",
   "blockdesc-canhold-title": "Może przechowywać",
   "blockdesc-canbeplacedin-title": "Można umieścić w",
-  "blockdesc-breadshelf-text": "  -Wszystkie rodzaje chleba<br>Expanded Foods:<br>  -Muffinki<br>  -Pierogi<br>  -Miękki chleb<br>Wildcraft: Fruits and Nuts:<br>  -Pacoca<br>  -Chałwa<br>  -Marcepan",
-  "blockdesc-eggshelf-text": "  -Surowe lub gotowane jajka",
-  "blockdesc-pieshelf-text": "  -Wszystkie placki i sery",
-  "blockdesc-seedshelf-text": "  -Wszystkie torby z nasionami",
-  "blockdesc-tablewshelf-text": "  -Wszystko, co można umieścić na standardowych półkach",
-  "blockdesc-fruitbasket-text": "  -Wszystkie rodzaje owoców",
-  "blockdesc-vegetablebasket-text": "  -Większość warzyw",
+  "blockdesc-breadshelf-text": "  - Wszystkie rodzaje chleba<br>Expanded Foods:<br>  - Muffinki<br>  - Pierogi<br>  - Miękki chleb<br>Wildcraft: Fruits and Nuts:<br>  - Pacoca<br>  - Chałwa<br>  - Marcepan",
+  "blockdesc-eggshelf-text": "  - Surowe lub gotowane jajka",
+  "blockdesc-pieshelf-text": "  - Wszystkie placki i sery",
+  "blockdesc-seedshelf-text": "  - Wszystkie torby z nasionami",
+  "blockdesc-tablewshelf-text": "  - Wszystko, co można umieścić na standardowych półkach",
+  "blockdesc-fruitbasket-text": "  - Wszystkie rodzaje owoców",
+  "blockdesc-vegetablebasket-text": "  - Większość warzyw",
   "blockdesc-barrelrackbig-text": "  Duże leżące beczki. Te beczki mogą przechowywać tylko płyny.",
   "game:tabname-foodshelves": "Food Shelves",
   "block-shelfshort-*": "Krótka półka",
   "block-glassjarshelf-*": "Półka na słoiki",
   "block-tablewshelf-whitemarble-*": "Stół z blatem z białego marmuru i półką",
   "block-pumpkincase-*": "Skrzynka na dynie",
-  "blockdesc-sushishelf-text": "Expanded Foods:<br>  -Wszystkie rodzaje sushi",
-  "blockdesc-barshelf-text": "Expanded Foods:<br>  -Batony owocowe<br>Wildcraft: Fruits and Nuts:<br>  -Wszystkie batony",
-  "blockdesc-barrelrack-text": "  -Beczki. Te beczki mogą przechowywać wyłącznie płyny.",
+  "blockdesc-sushishelf-text": "Expanded Foods:<br>  - Wszystkie rodzaje sushi",
+  "blockdesc-barshelf-text": "Expanded Foods:<br>  - Batony owocowe<br>Wildcraft: Fruits and Nuts:<br>  - Wszystkie batony",
+  "blockdesc-barrelrack-text": "  - Beczki. Te beczki mogą przechowywać wyłącznie płyny.",
   "block-shortshelf-*": "Krótka półka",
   "block-tun-*": "Wielka beczka",
   "block-tunrack-*": "Stojak na wielkie beczki",
-  "blockdesc-tunrack-text": "  -Wielkie beczki. Mogą one przechowywać wyłącznie płyny.",
+  "blockdesc-tunrack-text": "  - Wielkie beczki. Mogą one przechowywać wyłącznie płyny.",
   "This tun needs to be placed in a tun rack.": "Tę wielką beczkę można umieścić tylko w stojaku na wielkie beczki.",
   "Missing tun.": "<font color=\"orange\">Brakuje wielkiej beczki.</font>",
   "block-fooddisplayblock-*": "Szklana witryna na żywność",
@@ -65,16 +65,16 @@
   "Average freshness {0} years": "Średnia świeżość: {0} lat",
   "Average freshness {0} days": "Średnia świeżość: {0} dni",
   "Average freshness {0} hours": "Średnia świeżość: {0} godzin",
-  "blockdesc-tun-text": "  -Tę wielką beczkę można umieścić tylko w stojaku na wielkie beczki.",
+  "blockdesc-tun-text": "  - Tę wielką beczkę można umieścić tylko w stojaku na wielkie beczki.",
   "Only tuns can be placed on this rack.": "Na tym stojaku można umieścić tylko wielkie beczki.",
   "helddesc-tunrack": "Płyny przechowywane w wielkich beczkach na tym stojaku zachowują świeżość o 60% dłużej i fermentują o 25% wolniej.",
-  "blockdesc-holderuniversal-text": "  – Placki, sery, wszystkie rodzaje chleba, weki i garnki<br>Półki na żywność:<br>  – Wszystkie kosze<br>Expanded Foods:<br>  – Batony owocowe<br>  – Muffinki<br>  – Pierogi<br>  – Miękki chleb<br>Wildcraft: Fruits and Nuts:<br>  – Wszystkie batony orzechowe<br>  – Pacoca<br>  – Chałwa<br>  – Marcepan<br>All pemmicans:<br>  – Wszystkie pemmikany<br>  – Pakowany pemmikan<br>  – Pasztet grzybowy",
+  "blockdesc-holderuniversal-text": "  - Placki, sery, wszystkie rodzaje chleba, weki i garnki<br>Food Shelves:<br>  - Wszystkie kosze<br>Expanded Foods:<br>  - Batony owocowe<br>  - Muffinki<br>  - Pierogi<br>  - Miękki chleb<br>Wildcraft: Fruits and Nuts:<br>  - Wszystkie batony orzechowe<br>  - Pacoca<br>  - Chałwa<br>  - Marcepan<br>Wszystkie pemmikany:<br>  - Wszystkie pemmikany<br>  - Pakowany pemmikan<br>  - Pasztet grzybowy",
   "Soonest": "Zepsuje się najszybciej:",
   "Displaying segment": "<font color=\"#7b7b7b\">Miejsce:</font>",
   "Missing barrel.": "<font color=\"orange\">Brakuje beczki.</font>",
-  "blockdesc-liquidystuff-text": "  – Zboże, żywica, wosk pszczeli, tłuszcz zwierzęcy<br>Expanded Foods:<br>  – Wszystkie suszone owoce",
-  "blockdesc-pumpkincase-text": "  -Dynie.",
-  "blockdesc-fooduniversal-text": "  – Placki, sery, wszystkie rodzaje chleba<br>Expanded Foods:<br>  – Muffinki<br>  – Pierogi<br>  – Miękki chleb",
+  "blockdesc-liquidystuff-text": "  - Zboże, żywica, wosk pszczeli, tłuszcz zwierzęcy<br>Expanded Foods:<br>  - Wszystkie suszone owoce",
+  "blockdesc-pumpkincase-text": "  - Dynie.",
+  "blockdesc-fooduniversal-text": "  - Placki, sery, wszystkie rodzaje chleba<br>Expanded Foods:<br>  - Muffinki<br>  - Pierogi<br>  - Miękki chleb",
   "helddesc-breadshelf": "Chleb umieszczony na tej półce zachowuje świeżość o 100% dłużej.",
   "helddesc-barrelrack": "Płyny przechowywane w beczkach na tym stojaku zachowują świeżość o 50% dłużej i fermentują o 20% wolniej.",
   "helddesc-ceilingjar": "Wyciśnięte owoce umieszczone w podwieszanym słoiku schną lub rozpadają się 2,5 raza szybciej oraz zachowują świeżość o 25% dłużej.",
@@ -102,5 +102,37 @@
   "will perish in {0} days": "zepsuje się za {0} dni",
   "will perish in {0} hours": "zepsuje się za {0} godzin",
   "Items inside {0}": "Zawartość: {0}",
-  "No item will perish soon.": "Nic się wkrótce nie zepsuje."
+  "No item will perish soon.": "Nic się wkrótce nie zepsuje.",
+  "block-barshelf-normal-*": "Półka na batony",
+  "block-barshelf-short-*": "Krótka półka na batony",
+  "block-sushishelf-normal-*": "Półka na sushi",
+  "block-sushishelf-short-*": "Krótka półka na sushi",
+  "block-eggshelf-normal-*": "Półka na jajka",
+  "block-seedshelf-normal-*": "Półka na nasiona",
+  "block-seedshelf-short-*": "Krótka półka na nasiona",
+  "block-seedshelf-veryshort-*": "Bardzo krótka półka na nasiona",
+  "block-glassjarshelf-short-*": "Krótka półka na słoiki",
+  "block-barrelrack-normal-*": "Stojak na beczki",
+  "block-tunrack-normal-*": "Stojak na wielkie beczki",
+  "block-firkinrack-normal-*": "Stojak na małe beczki",
+  "block-barrelrack-top-*": "Stojak na beczki (górna część)",
+  "block-firkinrack-top-*": "Stojak na małe beczki (górna część)",
+  "block-meatfreezer-*": "Zamrażarka na mięso",
+  "block-wallcabinet-*": "Szafka ścienna",
+  "block-floursack-*": "Wór na mąkę",
+  "block-doubleshelf-*": "Szeroka półka",
+  "block-fooddisplayblock-top": "Szklana witryna na żywność (górna część)",
+  "helddesc-wallcabinet": "Rzeczy przechowywane w tej szafce pozostają świeże do 25% dłużej.<br>Pamiętaj, by trzymać ją zamkniętą!",
+  "helddesc-floursack": "Mąka przechowywana w tym worze zachowuje świeżość do 4 razy dłużej.",
+  "Only flour can be placed in this sack.": "W tym worze można umieścić tylko mąkę.",
+  "block-breadshelf-normal-*": "Półka na chleb",
+  "block-glassjarshelf-normal-*": "Półka na słoiki",
+  "block-fooddisplayblock-normal": "Szklana witryna na żywność",
+  "block-breadshelf-short-*": "Krótka półka na chleb",
+  "block-eggshelf-short-*": "Krótka półka na jajka",
+  "blockdesc-meatfreezer-text": "  - Większość rodzajów surowego mięsa.",
+  "blockdesc-floursack-text": "  - Wszystkie rodzaje mąki.",
+  "Only raw meat can be placed in this freezer.": "W tej zamrażarce można umieścić tylko surowe mięso.",
+  "helddesc-meatfreezer": "Surowe mięso przechowywane w tej zamrażarce zachowuje świeżość o 60% dłużej, a nawet do 5 razy dłużej po dodaniu lodu.<br>Pamiętaj, by trzymać ją zamkniętą!",
+  "block-tunrack-top-*": "Stojak na wielkie beczki (górna część)"
 }
