--- a/assets/foodshelves/lang/en.json
+++ b/assets/foodshelves/lang/en.json
@@ -65,7 +65,7 @@
   "blockdesc-barrelrack-text": "  -Barrels. These barrels can only hold liquids.",
   "blockdesc-tunrack-text": "  -Tuns. These tuns can only hold liquids.",
   "blockdesc-tun-text": "  -This tun can only be placed inside a tun rack.",
-  "blockdesc-liquidystuff-text": "  -Grain, resin, beeswax, animal fat<br>Expanded Foods:<br>  -All dehydrated/dry fruits",
+  "blockdesc-liquidystuff-text": "  -Grain, resin, beeswax, animal fat, peanuts<br>Expanded Foods:<br>  -All dehydrated/dry fruits<br>  -Cooked/Kernel peanuts<br>Wildcraft:Fruits and Nuts:<br>  -Ground Peanuts",
   "blockdesc-pumpkincase-text": "  -Pumpkins.",
   "blockdesc-fooduniversal-text": "  -Pies, Cheese, all bread types<br>Expanded Foods:<br>  -Muffins<br>  -Dumplings<br>  -Soft bread",
   "blockdesc-holderuniversal-text": "  -Pies, Cheese, all bread types, crocks and pots<br>Food Shelves:<br>  -All baskets<br>Expanded Foods:<br>  -Fruit bars<br>  -Muffins<br>  -Dumplings<br>  -Soft bread<br>Wildcraft: Fruits and Nuts:<br>  -All nut bars<br>  -Pacoca<br>  -Halva<br>  -Marzipam<br>Long-term food:<br>  -All pemmicans<br>  -Packed pemmican<br>  -Mushroom pate",
