--- a/assets/foodshelves/lang/en.json
+++ b/assets/foodshelves/lang/en.json
@@ -102,6 +102,7 @@
   "Only eggs can be placed in this basket.": "Only eggs can be placed in this basket.",
   "Only barrels can be placed on this rack.": "Only barrels can be placed on this rack.",
   "Only tuns can be placed on this rack.": "Only tuns can be placed on this rack.",
+  "Only pumpkins can be placed in this case.": "Only pumpkins can be placed in this case.",
   "Only raw meat can be placed in this freezer.": "Only raw meat can be placed in this freezer.",
   "Only flour can be placed in this sack.": "Only flour can be placed in this sack.",
   "Only buckets can be placed on this hook.": "Only buckets can be placed on this hook.",
