--- a/assets/foodshelves/lang/ru.json
+++ b/assets/foodshelves/lang/ru.json
@@ -1,7 +1,10 @@
 {
-  "game:tabname-foodshelves": "Полки для еды",
+  "game:tabname-foodshelves": "Food Shelves",
 
-  "foodshelvesserver": "Полки для еды сервер",
+  "foodshelvesserver": "Food Shelves: сервер",
+
+  "foodshelvesguide-title": "Food Shelves: Руководство",
+  "foodshelvesguide-text": "<strong>Полки для еды: Руководство игрока</strong><br><br><strong>Введение</strong><br>Этот мод добавляет различные варианты хранения, такие как полки для демонстрации, корзины для украшения и другие специализированные контейнеры. Некоторые блоки также предоставляют <strong>механические эффекты</strong>, такие как бонусы к свежести, скорости вяления или сушки.<br><br><strong>Примечание</strong><br>Этот мод создан с учетом <a href=\"https://mods.vintagestory.at/expandedfoods\">Expanded Foods</a>. Определённые блоки (например, стойки для бочек) будут <strong>вялить жидкости</strong> только при установленном Expanded Foods. Без него они всё равно дают бонусы к свежести, но вяления не происходит.<br><br><strong>Бонусы блоков</strong><br>Некоторые блоки дают бонусы к <i>скорости порчи</i>, <i>скорости вяления</i> или <i>скорости сушки</i>. Если у блока есть такой бонус, он будет отображён прямо во всплывающей подсказке блока при наведении. Эти подсказки также могут показывать полезные функции для <i>качества жизни</i> — например, <a href=\"handbook://block-foodshelves:seedbins-normal-east\">ящики для семян</a> показывают тип питательных веществ, необходимых для содержащихся в них семян.<br><br><strong>Механика охлаждения льдом</strong><br>Такие блоки, как <a href=\"handbook://block-foodshelves:coolingcabinet-normal-east\">охлаждающий шкаф</a> и <a href=\"handbook://block-foodshelves:meatfreezer-normal-east\">морозильник для мяса</a>, дают небольшой бонус к свежести без усилений, пока их двери <strong>закрыты</strong>. Если оставить двери открытыми, бонус исчезает, так что всегда держите их закрытыми!<br>Эти блоки можно дополнительно улучшить с помощью <a href=\"handbook://item-foodshelves:cutice\">колотого льда</a>. Лёд помещается в отдельный ящик, со временем тает и должен регулярно заменяться. Бонус действует только тогда, когда и основной отсек, и ящик для льда закрыты, так что не забудьте проверить двери!<br><br><strong>Корзины для украшения и хранения</strong><br>Корзины в основном декоративные и не предназначены для массового хранения. Однако если их поставить внутрь <a href=\"handbook://block-foodshelves:coolingcabinet-normal-east\">охлаждающего шкафа</a>, они наследуют его бонусы к свежести (со льдом или без), что делает их стильным способом немного продлить срок хранения еды.<br><br><strong>Дополнительная информация</strong><br>Не все контейнеры принимают любые предметы. У каждого блока есть отдельная запись в справочнике, где перечислены допустимые типы предметов и, при необходимости, моды, из которых они берутся.<br><br><strong>Взаимодействия</strong><br>Большинство взаимодействий отображается через <i>World Interactions</i> (подсказки в игре). Например: добавление предметов в корзины, закрывание дверец шкафов или наполнение ящиков льдом.<br>Некоторые взаимодействия <strong>не</strong> отображаются, особенно когда корзины находятся внутри шкафов. Но вы всё равно можете класть предметы прямо в корзину (ПКМ с правильным предметом или удерживание <strong>CTRL</strong> для вставки нескольких). С пустой рукой удерживание <strong>CTRL</strong> достанет по одному предмету за раз.<br><br><i>Наслаждайтесь вашими красивыми и функциональными кухнями!</i>",
 
   "item-cutice": "Нарезанный лёд",
 
@@ -50,8 +53,12 @@
   "block-buckethook-*": "Крюк для ведра",
   "block-seedbins-*": "Контейнеры для семян",
 
+  "block-mushroombasket-*": "Корзина для грибов",
+  "block-fruitcooler-*": "Охладитель для фруктов",
+
   "blockdesc-canhold-title": "Помещает:",
   "blockdesc-canbeplacedin-title": "Помещается в:",
+
   "blockdesc-breadshelf-text": "  -Все виды хлеба<br>Expanded Foods:<br>  -Маффины<br>  -Пельмени<br>  -Мягкий хлеб<br>Wildcraft: Fruits and Nuts:<br>  -Pacoca<br>  -Халва<br>  -Марципан",
   "blockdesc-eggshelf-text": "  -Сырые или варёные яйца",
   "blockdesc-sushishelf-text": "Expanded Foods:<br>  -Любые суши",
@@ -73,6 +80,9 @@
   "blockdesc-buckethook-text": "  -Вёдра.",
   "blockdesc-seedbins-text": "  -Семена.",
 
+  "blockdesc-mushroombasket-text": "  -Все грибы.",
+  "blockdesc-fruitcooler-text": "  -Все фрукты.",
+
   "helddesc-breadshelf": "Хлеб, помещенный на эту полку, остается свежим на 100% дольше.",
   "helddesc-barrelrack": "Жидкости, хранящиеся в этой бочке, остаются свежими на 50% дольше и затвердевают на 20% медленнее.",
   "helddesc-tunrack": "Жидкости, хранящиеся в этой бочке, остаются свежими на 60% дольше и затвердевают на 25% медленнее.",
@@ -82,6 +92,9 @@
   "helddesc-meatfreezer": "Сырое мясо, хранящееся в этой морозильной камере, остается свежим на 60% дольше, а при добавлении льда - в 5 раз дольше.<br>Не забудьте закрыть!",
   "helddesc-wallcabinet": "Вещи, помещенные в этот шкаф, хранятся на 25% дольше.<br>Не забудьте закрыть!",
   "helddesc-floursack": "Мука, помещенная в этот мешок, хранится в 4 раза дольше.",
+
+  "helddesc-fruitcooler": "Фрукты, помещённые в этот охладитель, хранятся до 30% дольше, а с добавлением льда — до 3 раз дольше.<br>Обязательно держите его закрытым!",
+  "helddesc-seedbins": "Показывает тип питательных веществ и оптимальную температуру для семян, хранящихся внутри.",
 
   "This item cannot be placed in this container.": "Этот предмет не может быть помещен в данный контейнер.",
   "Only pies or cheese can be placed on this shelf.": "На эту полку можно класть только пироги или сыр.",
@@ -100,6 +113,9 @@
   "Only flour can be placed in this sack.": "В этот мешок можно класть только муку.",
   "Only buckets can be placed on this hook.": "На этот крючок можно вешать только ведра.",
   "Only seeds can be placed in these jars.": "В эти банки можно класть только семена.",
+
+  "Only mushrooms can be placed in this basket.": "В эту корзину можно класть только грибы.",
+  "Only fruit can be placed in this cooler.": "В этот охладитель можно класть только фрукты.",
 
   "This tun needs to be placed in a tun rack.": "Эту большую бочку необходимо поместить в стойку для больших бочек.",
   "The barrel must be emptied before it can be picked up.": "Прежде чем поднимать бочку, ее необходимо опорожнить.",
@@ -133,5 +149,15 @@
   "will perish in {0} days": "Погибнет через {0} дней",
   "will perish in {0} hours": "Погибнет через {0} часов",
   "Items inside {0}": "Предметов внутри: {0}",
-  "No item will perish soon.": "Ни один предмет не погибнет в ближайшее время."
+  "No item will perish soon.": "Ни один предмет не погибнет в ближайшее время.",
+
+  "segmentnum-0": "Нижний левый",
+  "segmentnum-1": "Нижний центр",
+  "segmentnum-2": "Нижний правый",
+  "segmentnum-3": "Средний левый",
+  "segmentnum-4": "Средний центр",
+  "segmentnum-5": "Средний правый",
+  "segmentnum-6": "Верхний левый",
+  "segmentnum-7": "Верхний центр",
+  "segmentnum-8": "Верхний правый"
 }
